<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>
	<string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
	<string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
	<string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
	<string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
	<string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
	<string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
	<string name="blockchain_state_progress_downloading">Synchronizing with network</string>
	<string name="blockchain_state_progress_stalled">Synchronization stalled</string>
	<string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
	<string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
	<string name="wallet_address_fragment_clipboard_msg">Kryptohash address copied to clipboard</string>
	<string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket, please move some to a safer place.</string>
	<string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
	<string name="exchange_rates_activity_title">Exchange rates</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
	<string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
	<string name="exchange_rates_fragment_default">(default)</string>
	<string name="exchange_rates_fragment_rate">rate</string>
	<string name="exchange_rates_fragment_balance">balance</string>
	<string name="exchange_rates_fragment_source">Price from %s</string>
	<string name="exchange_rates_options_search">Search exchange rate</string>
	<string name="exchange_rates_context_set_as_default_title">Set as default foreign currency</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Kryptohash Coins received so far.</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Kryptohash Coins sent so far.</string>
	<string name="wallet_transactions_fragment_empty_text_howto">How to get Kryptohash Coins?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
	<string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u&gt;backed up your wallet&lt;/u&gt;, to protect against loss?</string>
	<string name="wallet_transactions_fragment_coinbase">mined</string>
	<string name="wallet_transactions_fragment_internal">internal</string>
	<string name="wallet_options_safety_menu">Safety</string>
	<string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
	<string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / donate</string>
	<string name="wallet_donate_address_label">Donation for Kryptohash Wallet</string>
	<string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
	<string name="wallet_low_storage_dialog_msg">Kryptohash Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your KHCs will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive KHCs due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
	<string name="wallet_version_dialog_title">A new version is available!</string>
	<string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
	<string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
	<string name="wallet_version_dialog_button_market">Google Play</string>
	<string name="wallet_version_dialog_button_binary">Download</string>
	<string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
	<string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Kryptohash Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
	<string name="send_coins_activity_title">Send KHCs</string>
	<string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
	<string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
	<string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
	<string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
	<string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Kryptohash address!</string>
	<string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
	<string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
	<string name="send_coins_fragment_hint_fee">A small network fee of %s will be paid.</string>
	<string name="send_coins_fragment_hint_dusty_send">The amount is too small to send.</string>
	<string name="send_coins_fragment_hint_insufficient_money">Not enough available coins. You\'re missing %s.</string>
	<string name="send_coins_fragment_hint_empty_wallet_failed">The amount of tiny payments in your wallet doesn\'t add up to a sendable value.</string>
	<string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
	<string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
	<string name="send_coins_fragment_direct_payment_nack">Your payment was rejected via direct connection.</string>
	<string name="send_coins_fragment_direct_payment_failed_title">Direct payment failed</string>
	<string name="send_coins_fragment_direct_payment_failed_msg">Your payment will still be broadcasted via the P2P network.</string>
	<string name="send_coins_fragment_private_key_password">PIN</string>
	<string name="send_coins_fragment_private_key_bad_password">bad PIN!</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_fragment_insufficient_money_title">Not enough available coins</string>
	<string name="send_coins_fragment_insufficient_money_msg1">You\'re missing %s.</string>
	<string name="send_coins_fragment_insufficient_money_msg2">Do you want to pay with all you have?</string>
	<string name="send_coins_fragment_empty_wallet_failed_title">Emptying of wallet failed</string>
	<string name="send_coins_fragment_state_decrypting">Decrypting…</string>
	<string name="send_coins_preparation_msg">Signing…</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_failed_msg">Failed!</string>
	<string name="send_coins_error_msg">Problem sending coins!</string>
    <string name="send_coins_options_priority">Quick confirm, higher fee</string>
	<string name="send_coins_options_empty">Empty wallet</string>
	<string name="send_coins_address_context_clear_title">Enter new address</string>
	<string name="sweep_wallet_activity_title">Sweep paper wallet</string>
	<string name="sweep_wallet_fragment_intro">You are about to sweep a paper wallet or coupon. This will move all coins from that paper to your wallet on this device. When the transaction is confirmed, the paper will be worthless and should not be re-used for safety reasons.</string>
	<string name="sweep_wallet_fragment_hint">Paper wallets are most commonly used for cold storage. Some ATMs print them on their paper slip rather than sending the coins to your mobile device directly. People sometimes use pre-charged paper wallets to pass value around (not recommended).</string>
	<string name="sweep_wallet_fragment_wallet_unknown">Start by scanning the private key of a paper wallet. Use the camera action button.</string>
    <string name="sweep_wallet_fragment_encrypted">This private key is protected with a password.</string>
    <string name="sweep_wallet_fragment_password">password</string>
	<string name="sweep_wallet_fragment_bad_password">bad password!</string>
    <string name="sweep_wallet_fragment_balance">Balance to sweep</string>
    <string name="sweep_wallet_fragment_button_decrypt">Decrypt</string>
	<string name="sweep_wallet_fragment_button_sweep">Sweep</string>
    <string name="sweep_wallet_fragment_decrypt_progress">Decrypting…\nTakes up to 2 minutes.</string>
	<string name="sweep_wallet_fragment_request_wallet_balance_progress">Loading balance…</string>
	<string name="sweep_wallet_fragment_request_wallet_balance_failed_title">Loading wallet balance failed</string>
	<string name="sweep_wallet_fragment_insufficient_money_title">Not enough coins</string>
	<string name="preferences_category_labs">Labs</string>
	<string name="preferences_precision_title">Denomination and precision</string>
	<string name="preferences_precision_summary">Unit to show amounts in. This does not affect computations.</string>
	<string name="preferences_connectivity_notification_title">Connectivity indicator</string>
	<string name="preferences_connectivity_notification_summary">Show current number of connected peers in the notification area.</string>
	<string name="preferences_trusted_peer_title">Trusted peer</string>
	<string name="preferences_trusted_peer_summary">IP or hostname of single peer to connect to.</string>
	<string name="preferences_trusted_peer_only_title">Skip regular peer discovery</string>
	<string name="preferences_trusted_peer_only_summary">Prevents connecting to any peers besides the trusted peer.</string>
	<string name="preferences_data_usage_title">Data usage</string>
	<string name="preferences_data_usage_summary">Show options to restrict data usage on mobile networks.</string>
    <string name="preferences_warning_title">Warning</string>
    <string name="preferences_warning_summary">This is all unfinished stuff. Use at your own risk!</string>
    <string name="preferences_bip70scantopay_title">BIP70 for scan-to-pay</string>
    <string name="preferences_bip70scantopay_summary">Use payment protocol for QR-code initiated payments</string>
	<string name="about_version_title">App version</string>
	<string name="about_license_title">License</string>
	<string name="about_source_title">Source code</string>
	<string name="about_credits_zxing_title">This app is using ZXing</string>
	<string name="about_market_app_title">Google Play Store</string>
	<string name="about_market_app_summary">Review or rate the app</string>
</resources>