<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<ListPreference
		android:defaultValue="4"
		android:entries="@array/preferences_precision_labels"
		android:entryValues="@array/preferences_precision_values"
		android:key="btc_precision"
		android:summary="@string/preferences_precision_summary"
		android:title="@string/preferences_precision_title" />

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="connectivity_notification"
		android:summary="@string/preferences_connectivity_notification_summary"
		android:title="@string/preferences_connectivity_notification_title" />

	<EditTextPreference
		android:key="trusted_peer"
		android:summary="@string/preferences_trusted_peer_summary"
		android:title="@string/preferences_trusted_peer_title" />

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="trusted_peer_only"
		android:summary="@string/preferences_trusted_peer_only_summary"
		android:title="@string/preferences_trusted_peer_only_title" />

	<Preference
		android:key="data_usage"
		android:summary="@string/preferences_data_usage_summary"
		android:title="@string/preferences_data_usage_title" >
		<intent
			android:targetClass="com.android.settings.Settings$DataUsageSummaryActivity"
			android:targetPackage="com.android.settings" />
	</Preference>

	<PreferenceCategory android:title="@string/preferences_category_labs" >
		<Preference
			android:icon="@drawable/ic_menu_warning"
			android:summary="@string/preferences_warning_summary"
			android:title="@string/preferences_warning_title" />
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="labs_qr_payment_request"
			android:summary="@string/preferences_bip70scantopay_summary"
			android:title="@string/preferences_bip70scantopay_title" />
	</PreferenceCategory>

</PreferenceScreen>