<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<Preference
		android:key="about_version"
		android:title="@string/about_version_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://bitfynd.com" />
    </Preference>
	<Preference
		android:key="about_license"
		android:summary="GPL v3.0"
		android:title="@string/about_license_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://www.gnu.org/licenses/gpl-3.0.txt" />
	</Preference>
	<Preference
		android:key="about_source"
		android:summary="github.com/kryptohash/kryptohash-android"
		android:title="@string/about_source_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/kryptohash/kryptohash-android" />
	</Preference>
	<Preference
		android:key="about_market_app"
		android:summary="@string/about_market_app_summary"
		android:title="@string/about_market_app_title" />
    <Preference
        android:key="about_credits_bitcoin_wallet"
        android:summary="github.com/schildbach/bitcoin-wallet" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/schildbach/bitcoin-wallet" />
    </Preference>
	<Preference
		android:key="about_credits_bitcoinj"
		android:summary="bitcoinj.github.io" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://bitcoinj.github.io" />
	</Preference>
	<Preference
		android:key="about_credits_zxing"
		android:summary="github.com/zxing/zxing"
		android:title="@string/about_credits_zxing_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/zxing/zxing" />
	</Preference>

</PreferenceScreen>